--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,26 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Safe streaming with linear types
+email: edvard@hubinette.me
+description: 
+    Adaptation of the streaming library for increased safety through linear types. Summer of Haskell 2017 project in collaboration with Tweag I/O.  My name is Edvard Hübinette, and I study computer science @ Chalmers University of Technology in Gothenburg, Sweden.
+baseurl: "/safe-streaming" # the subpath of your site, e.g. /blog
+url: "https://m0ar.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  m0ar
+
+# Build settings
 theme: jekyll-theme-minimal
-baseurl: /safe-streaming
+google_analytics: UA-100571087-1
