--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,6 @@ github_username:  m0ar
 # Build settings
 theme: jekyll-theme-minimal
 google_analytics: UA-100571087-1
+
+gems:
+    - jekyll-feed
