--- a/stack.yaml
+++ b/stack.yaml
@@ -25,7 +25,7 @@ docker:
   # GHC 8.1 
   #  image: parfunc/linear-types:0.0.2
   # GHC 8.2.X rebase
-  image: tweag/linear-types:0.1.2
+  image: tweag/linear-types:latest
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -59,28 +59,21 @@ extra-deps:
 - lifted-base-0.2.3.11
 - stm-2.4.4.1
 - transformers-compat-0.5.1.4
-
+- HUnit-1.6.0.0
+- QuickCheck-2.9.2
+- ansi-terminal-0.6.3.1
+- async-2.1.1.1
+- call-stack-0.1.0
+- hspec-expectations-0.8.2
+- quickcheck-io-0.1.4
+- random-1.1
+- setenv-0.1.1.3
+- tf-random-0.5
+- primitive-0.6.2.0
+- HUnit-1.6.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
 
 # Extra package databases containing global packages
 extra-package-dbs: []
-
-# Control whether we use the GHC we find on the path
-# system-ghc: true
-#
-# Require a specific version of stack, using version ranges
-# require-stack-version: -any # Default
-# require-stack-version: ">=1.4"
-#
-# Override the architecture used by stack, especially useful on Windows
-# arch: i386
-# arch: x86_64
-#
-# Extra directories used by stack for building
-# extra-include-dirs: [/path/to/dir]
-# extra-lib-dirs: [/path/to/dir]
-#
-# Allow a newer minor version of GHC than the snapshot specifies
-# compiler-check: newer-minor
