--- a/streaming.cabal
+++ b/streaming.cabal
@@ -236,4 +236,20 @@ library
 
 
 
-
+test-suite streaming-tests
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is: Spec.hs
+  build-depends:       base >=4.6
+                     , mtl >=2.1
+                     , mmorph >=1.0
+                     , transformers >=0.4
+                     , transformers-base < 0.5
+                     , resourcet > 1.1.0
+                     , exceptions > 0.5
+                     , monad-control >=0.3.1
+                     , time
+                     , ghc-prim
+                     , containers
+                     , streaming
+                     , HUnit
