Add main src dir as source for tests

--- a/streaming.cabal
+++ b/streaming.cabal
@@ -238,7 +238,7 @@ library
 
 test-suite streaming-tests
   type: exitcode-stdio-1.0
-  hs-source-dirs: test
+  hs-source-dirs: test, src
   main-is: Spec.hs
   build-depends:       base >=4.6
                      , mtl >=2.1
